<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fuenteoro.ciclismo.Admin.ui.Home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.fuenteoro.ciclismo.Admin.ui.Rutas.RutasFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.fuenteoro.ciclismo.Admin.ui.Sitios.SitiosFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_usuarios"
        android:name="com.fuenteoro.ciclismo.Admin.ui.Usuarios.UsuariosFragment"
        android:label="@string/menu_usuarios"
        tools:layout="@layout/fragment_usuarios" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.fuenteoro.ciclismo.Admin.ui.Perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil_admin" />
</navigation>